# MicroPay

./: .dockerignore  .gitignore  DEPLOY.md  Procfile  QUICK_START.md  RAILWAY_DEPLOY.md  RAILWAY_SETUP.md  README.md  deploy-all.sh  env_example  env_x402_example  mcp_config.json  nixpacks.toml  pyproject.toml  railway-demo.toml  railway-x402.toml  railway.json
AI_chat/: .gitignore  README.md  curl.md  jwt_ed25519.py  jwt_gen.py  jwt_simple.py
AI_chat/backend/: DEPLOY.md  Dockerfile  README.md  coinbase_client.py  deploy_guide.md  main.py  railway.json  render.yaml  requirements.txt  x402_hello_agent.py
AI_chat/frontend/: .gitignore  DEPLOY.md  README.md  WALLET_INTEGRATION.md  package.json  railway.json
CCTP/: .gitignore  DEPLOY.md  README.md  frontend-example.js  hardhat.config.js  package.json
CCTP/contracts/: CCTPTransferBurn.sol  README.md
CCTP/scripts/: deploy.js  example-usage.js  test.js  (+1 more)
agent_analyst/: DEPLOY.md  Dockerfile  README.md  pyproject.toml  railway.json
agent_analyst/blockchain_analyst/: __init__.py  analyst.py  x402_client.py  x402_server.py
coinbase_price_agent/: client.py  demo_server.py
facilitator/: Dockerfile  FINAL_STATUS.md  FINAL_SUCCESS.py  README.md  create_valid_eip3009.py  domain_separator_utils.py  main.py  nonce_utils.py  requirements.txt
finder/: .gitignore  DEPLOY.md  Dockerfile  README.md  ai_agent_finder.py  api_server.py  bazaar_agents.json  bazaar_scout.py  demo.html  gemini_agent_finder.py  jwt_generator.py  quick_scan.sh  railway.json  requirements.txt  start_api.sh
price_agent/: Dockerfile  pyproject.toml
(+25 files in other folders)
